--- a/file/default.css
+++ b/file/default.css
@@ -56,8 +56,8 @@ a {
 }
 #canvas {
   margin: 0 auto;
-  width: 1100px;
-  height: 680px;
+  width: 100%;
+  height: 100%;
 }
 #error {
   margin: 0 auto;
